--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
     Curriculo Digital
 </title>
 
+<body>
+    <h1>
+        Formação Acadêmica
+    </h1>
 
-<h1>
-    Meu Currículo, diferente
-</h1>
+    <p>
+        • Administração de Empresas, Universidade Paulista UNIP - 2 anos (Interrompido)
+        • Operador de Produção Mecânica - Universidade Federal Tecnológica do Paraná
+        • Análise e Desenvolvimento de Sistemas – Fatec SJC – (Cursando 2º Semestre)
+        • Inglês Intermediário
+        • Treinamento A.C.E.L.E.R.A MRV - Vendas e Negociações
+    </p>
+
+
+
+
+</body>
