paginas de contato, objetivos e estilização

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<META charset="UTF-8">
+
+<html>
 
 <title>
     Curriculo Digital
@@ -9,14 +12,28 @@
     </h1>
 
     <p>
-        • Administração de Empresas, Universidade Paulista UNIP - 2 anos (Interrompido)
-        • Operador de Produção Mecânica - Universidade Federal Tecnológica do Paraná
-        • Análise e Desenvolvimento de Sistemas – Fatec SJC – (Cursando 2º Semestre)
-        • Inglês Intermediário
-        • Treinamento A.C.E.L.E.R.A MRV - Vendas e Negociações
+        • Administração de Empresas, Universidade Paulista UNIP - 2 anos (Interrompido)<br>
+        • Operador de Produção Mecânica - Universidade Federal Tecnológica do Paraná<br>
+        • Análise e Desenvolvimento de Sistemas – Fatec SJC – (Cursando 2º Semestre)<br>
+        • Inglês Intermediário<br>
+        • Treinamento A.C.E.L.E.R.A MRV - Vendas e Negociações<br>
     </p>
 
-
+    <footer>
+        <h1> Conquistas Profissionais </h1>
+        <p>
+            • Criador do novo Slogan de 80 anos da empresa Wickbold & Nosso Pão Ltda;<br>
+            • Certificado de Honra ao Mérito: Aluno Destaque Unip 1° Semestre de 2018
+        </p>
+    </footer>
 
 
 </body>
+
+
+
+
+
+
+
+</html>
