--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
-<META charset="UTF-8">
+<meta charset="UTF-8">
 
 <html>
+    <head>
+        <title>About Me</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="./script.js"></script>
+        <link rel="stylesheet" href='./style.css'>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/6b3a9e549b.js" crossorigin="anonymous"></script>
+    </head>
 
-<title>
-    Curriculo Digital
-</title>
+    <body>
+      <div id="content">
+        <header>
+          <nav id='navBar' class="navbar navbar-custom navbar-fixed-top" role="navigation" hidden="true">
+            <a href="https://www.github.com/rdvid" target="_blank" class="navbar-brand"><i class="fa-solid fa-code"></i> Rdvid</a>
+            <ul id="navBarLinkList">
+              <li type="button" class="btn btn-secundary"><a href="#aboutMe"> About Me</a></li>
+              <li type="button" class="btn btn-secundary"><a href="#currentJob"> Services</a></li>
+              <li type="button" class="btn btn-secundary"><a href="#toolBelt"> Technologies</a></li>
+              <li type="button" class="btn btn-secundary"><a href="#contactMe"> Contact</a></li>
+            </ul>
+          </nav>
+        </header>
 
-<body>
-    <h1>
-        Formação Acadêmica
-    </h1>
-
-    <p>
-        • Administração de Empresas, Universidade Paulista UNIP - 2 anos (Interrompido)<br>
-        • Operador de Produção Mecânica - Universidade Federal Tecnológica do Paraná<br>
-        • Análise e Desenvolvimento de Sistemas – Fatec SJC – (Cursando 2º Semestre)<br>
-        • Inglês Intermediário<br>
-        • Treinamento A.C.E.L.E.R.A MRV - Vendas e Negociações<br>
-    </p>
-
-    <footer>
-        <h1> Conquistas Profissionais </h1>
-        <p>
-            • Criador do novo Slogan de 80 anos da empresa Wickbold & Nosso Pão Ltda;<br>
-            • Certificado de Honra ao Mérito: Aluno Destaque Unip 1° Semestre de 2018
-        </p>
-    </footer>
-
-
-</body>
+        <section id="intro">
+          <h1>Hey you, I'm Rafael D.</h1>
+          <h2>Web Developer and Tech Entusiast</h2>
+        </section>
+        
+        <section id="aboutMe">
+          <div class="container">
+            <img src="./images/profilePic.jpeg" class="img-fluid" height="200" width="200">
+            <p>test</p>
+          </div>
+        </section>
 
 
 
@@ -36,4 +44,6 @@
 
 
 
+      </div>
+    </body>
 </html>
