add logos, project section and hoverism

--- a/index.html
+++ b/index.html
@@ -19,22 +19,71 @@
             <a href="https://www.github.com/rdvid" target="_blank" class="navbar-brand"><i class="fa-solid fa-code"></i> Rdvid</a>
             <ul id="navBarLinkList">
               <li type="button" class="btn btn-secundary"><a href="#aboutMe"> About Me</a></li>
-              <li type="button" class="btn btn-secundary"><a href="#currentJob"> Services</a></li>
-              <li type="button" class="btn btn-secundary"><a href="#toolBelt"> Technologies</a></li>
-              <li type="button" class="btn btn-secundary"><a href="#contactMe"> Contact</a></li>
+              <li type="button" class="btn btn-secundary"><a href="#technologies"> Technologies </a></li>
+              <li type="button" class="btn btn-secundary"><a href="#projects"> Projects</a></li>
+              <li type="button" class="btn btn-secundary"><a href="#contact"> Contact</a></li>
+              <li type="button" class="btn btn-primary"><a href="#"> Resume <i class="fa-solid fa-address-card"></i></a></li>
             </ul>
           </nav>
         </header>
 
         <section id="intro">
           <h1>Hey you, I'm Rafael D.</h1>
-          <h2>Web Developer and Tech Entusiast</h2>
+          <h2>Web Developer and Tech Student</h2>
         </section>
         
         <section id="aboutMe">
           <div class="container">
-            <img src="./images/profilePic.jpeg" class="img-fluid" height="200" width="200">
-            <p>test</p>
+            <h3> About Me</h3>
+            <img src="./images/profilePic.jpeg" class="profilePic img-fluid" height="200" width="200">
+            <p>
+              Hello World, I'm Rafael David, a goal-oriented brazilian software developer <br> 
+              with a solid business management background. Currently i'm on my first <br> 
+              year of bachelor's degree in information technology by Univesp
+              <br><br>
+              When i'm not coding, i enjoy piano and reading.
+            </p>
+
+            <div class="selfProclaimContainer">
+              <h3>[TL;DR] Self Proclamations:</h3>
+              <ul class="selfProclaimList">
+                <li>
+                  <ul class="selfProclaimItem">
+                    <li><i class="fa-solid fa-laptop-code"></i></li>
+                    <li> Software Developer </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="selfProclaimItem">
+                    <li><i class="fa-solid fa-book"></i></li>
+                    <li> Casual Reader </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="selfProclaimItem">
+                    <li><i class="fa-solid fa-music"></i></li>
+                    <li> Piano Enthusiast </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section id="technologies">
+          <div class="techContainer">
+            <h3>Some technologies i've worked with: </h3>
+            <div class="cardContainer">
+              <img class="img-fluid" src="./images/html.png" alt="html icon" height="100" width="100">
+              <img class="img-fluid" src="./images/css.png" alt="css icon" height="100" width="100">
+              <img class="img-fluid" src="./images/javascript.png" alt="javascript icon" height="100" width="100">
+              <img class="img-fluid" src="./images/bootstrap.png" alt="bootstrap icon" height="100" width="100">
+              <img class="img-fluid" src="./images/jquery.png" alt="jquery icon" height="100" width="100">
+              <img class="img-fluid" src="./images/react.png" alt="react icon" height="100" width="100">
+              <img class="img-fluid" src="./images/python.png" alt="python icon" height="100" width="100">
+              <img class="img-fluid" src="./images/linux.png" alt="linux icon" height="100" width="100">
+              <img class="img-fluid" src="./images/git.png" alt="git icon" height="100" width="100">
+            </div>
           </div>
         </section>
 
