--- a/index.html
+++ b/index.html
@@ -74,18 +74,50 @@
           <div class="techContainer">
             <h3>Some technologies i've worked with: </h3>
             <div class="cardContainer">
-              <img class="img-fluid" src="./images/html.png" alt="html icon" height="100" width="100">
-              <img class="img-fluid" src="./images/css.png" alt="css icon" height="100" width="100">
-              <img class="img-fluid" src="./images/javascript.png" alt="javascript icon" height="100" width="100">
-              <img class="img-fluid" src="./images/bootstrap.png" alt="bootstrap icon" height="100" width="100">
-              <img class="img-fluid" src="./images/jquery.png" alt="jquery icon" height="100" width="100">
-              <img class="img-fluid" src="./images/react.png" alt="react icon" height="100" width="100">
-              <img class="img-fluid" src="./images/python.png" alt="python icon" height="100" width="100">
-              <img class="img-fluid" src="./images/linux.png" alt="linux icon" height="100" width="100">
-              <img class="img-fluid" src="./images/git.png" alt="git icon" height="100" width="100">
+              <img class="img1 img-fluid" title='html' src="./images/html.png" alt="html icon" height="100" width="100">
+              <img class="img2 img-fluid" title='css' src="./images/css.png" alt="css icon" height="100" width="100">
+              <img class="img3 img-fluid" title='javascript' src="./images/javascript.png" alt="javascript icon" height="100" width="100">
+              <img class="img4 img-fluid" title='bootstrap' src="./images/bootstrap.png" alt="bootstrap icon" height="100" width="100">
+              <img class="img5 img-fluid" title='jquery' src="./images/jquery.png" alt="jquery icon" height="100" width="100">
+              <img class="img6 img-fluid" title='reactjs' src="./images/react.png" alt="react icon" height="100" width="100">
+              <img class="img7 img-fluid" title='python' src="./images/python.png" alt="python icon" height="100" width="100">
+              <img class="img8 img-fluid" title='linux' src="./images/linux.png" alt="linux icon" height="100" width="100">
+              <img class="img9 img-fluid" title='git' src="./images/git.png" alt="git icon" height="100" width="100">
             </div>
           </div>
         </section>
+
+        <section id="projects">
+          
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="./images/react.png" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+        </section>
+
 
 
 
