--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <li type="button" class="btn btn-secundary"><a href="#technologies"> Technologies </a></li>
           <li type="button" class="btn btn-secundary"><a href="#projects"> Projects</a></li>
           <li type="button" class="btn btn-secundary"><a href="#contact"> Contact</a></li>
-          <li type="button" class="btn btn-primary"><a href="#"> Resume <i class="fa-solid fa-address-card"></i></a>
+          <li type="button" class="btn btn-primary"><a href="./Rafael David da Silva.pdf" target="_blank"> Resume <i
+                class="fa-solid fa-address-card"></i></a>
           </li>
         </ul>
         <div class="dropdown">
@@ -191,9 +192,16 @@
     <footer id="footerSection">
       <div class="footerContent">
         <ul id="networkLinks">
-          <li><i class="fa-brands fa-linkedin"><a href="https://www.linkedin.com/in/rdvid/" target="_blank"></a></i>
+          <li>
+            <a href="https://www.linkedin.com/in/rdvid/" target="_blank">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
           </li>
-          <li><i class="fa-brands fa-square-github"><a href="https://github.com/rdvid" target=""></a></i></li>
+          <li>
+            <a href="https://github.com/rdvid" target="_blank">
+              <i class="fa-brands fa-square-github"></i>
+            </a>
+          </li>
         </ul>
       </div>
 
