fixing semantic inconsistences

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <p>
           Hello World, I'm Rafael David, a goal-oriented brazilian software developer <br>
           with a solid business management background. Currently i'm on my first <br>
-          year of bachelor's degree in information technology by <a href="https://univesp.br/"
-            rel="noreferrer">Univesp</a>
+          year of bachelor's degree in information technology by <a href="https://univesp.br/" rel="noreferrer"
+            target="_blank">Univesp</a>
           <br><br>
           When i'm not coding, i enjoy piano and reading.
         </p>
@@ -75,20 +75,26 @@
           <ul class="selfProclaimList">
             <li>
               <ul class="selfProclaimItem">
-                <li><i class="fa-solid fa-laptop-code"></i></li>
-                <li> Software Developer </li>
+                <li>
+                  <i class="fa-solid fa-laptop-code"></i>
+                  <span> Software Developer </span>
+                </li>
               </ul>
             </li>
             <li>
               <ul class="selfProclaimItem">
-                <li><i class="fa-solid fa-book"></i></li>
-                <li> Casual Reader </li>
+                <li>
+                  <i class="fa-solid fa-book"></i>
+                  <span> Casual Reader </span>
+                </li>
               </ul>
             </li>
             <li>
               <ul class="selfProclaimItem">
-                <li><i class="fa-solid fa-music"></i></li>
-                <li> Piano Enthusiast </li>
+                <li>
+                  <i class="fa-solid fa-music"></i>
+                  <span> Piano Enthusiast </span>
+                </li>
               </ul>
             </li>
           </ul>
@@ -101,41 +107,39 @@
         <h2>Some technologies i've worked with: </h2>
         <div class="cardContainer">
           <div class="card img1">
-            <img class="img-fluid" title='html' src="./images/html.png" alt="html icon" height="100" width="100">
+            <img class="img-fluid" alt="" title='html' src="./images/html.png" height="100" width="100">
             <span class="cardLabel">Html</span>
           </div>
           <div class="card img2">
-            <img class="img-fluid" title='css' src="./images/css.png" alt="css icon" height="100" width="100">
+            <img class="img-fluid" alt="" title='css' src="./images/css.png" height="100" width="100">
             <span class="cardLabel">Css</span>
           </div>
           <div class="card img3">
-            <img class="img-fluid" title='javascript' src="./images/javascript.png" alt="javascript icon" height="100"
-              width="100">
+            <img class="img-fluid" alt="" title='javascript' src="./images/javascript.png" height="100" width="100">
             <span class="cardLabel">Javascript</span>
           </div>
           <div class="card img4">
-            <img class="img-fluid" title='bootstrap' src="./images/bootstrap.png" alt="bootstrap icon" height="100"
-              width="100">
+            <img class="img-fluid" alt="" title='bootstrap' src="./images/bootstrap.png" height="100" width="100">
             <span class="cardLabel">Bootstrap</span>
           </div>
           <div class="card img5">
-            <img class="img-fluid" title='jquery' src="./images/jquery.png" alt="jquery icon" height="100" width="100">
+            <img class="img-fluid" alt="" title='jquery' src="./images/jquery.png" height="100" width="100">
             <span class="cardLabel">jQuery</span>
           </div>
           <div class="card img6">
-            <img class="img-fluid" title='reactjs' src="./images/react.png" alt="react icon" height="100" width="100">
+            <img class="img-fluid" alt="" title='reactjs' src="./images/react.png" height="100" width="100">
             <span class="cardLabel">ReactJS</span>
           </div>
           <div class="card img7">
-            <img class="img-fluid" title='python' src="./images/python.png" alt="python icon" height="100" width="100">
+            <img class="img-fluid" alt="" title='python' src="./images/python.png" height="100" width="100">
             <span class="cardLabel">Python</span>
           </div>
           <div class="card img8">
-            <img class="img-fluid" title='linux' src="./images/linux.png" alt="linux icon" height="100" width="100">
+            <img class="img-fluid" alt="" title='linux' src="./images/linux.png" height="100" width="100">
             <span class="cardLabel">Linux</span>
           </div>
           <div class="card img9">
-            <img class="img-fluid" title='git' src="./images/git.png" alt="git icon" height="100" width="100">
+            <img class="img-fluid" alt="" title='git' src="./images/git.png" height="100" width="100">
             <span class="cardLabel">Git</span>
           </div>
         </div>
