fix project inconsistency and changing profile pic

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="aboutMe">
       <div class="container">
         <h2> About Me</h2>
-        <img src="./images/profilePic.jpeg" class="profilePic img-fluid" height="200" width="200">
+        <img src="./images/avatar.jpg" class="profilePic img-fluid" height="200" width="200">
         <p>
           Hello World, I'm Rafael David, a goal-oriented brazilian software developer <br>
           with a solid business management background. Currently i'm on my first <br>
@@ -170,11 +170,11 @@
           </div>
           <div class="carousel-item">
             <a href="https://rdvid.github.io/Landing-Page/" target="_blank">
-              <img src="./images/landingPageProject.png" class="d-block w-100" alt="Landing Page">
+              <img src="./images/pickngosite.jpg" class="d-block w-100" alt="Landing Page">
             </a>
             <div class="carousel-caption d-md-block">
-              <h3>Landing Page</h3>
-              <p>A project using Jquery and Bootstrap about a League of Legends character</p>
+              <h3>Zero Doze PicknGo</h3>
+              <p>A website requested by a logistic company</p>
             </div>
           </div>
           <div class="carousel-item">
